fix: CSS add spacing for calendar icon + fix too large spacing in home page title 'Club   Info'

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -12,7 +12,7 @@ div#header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 24px;
+    gap: 4vw;
 
     position: sticky;
     position: -webkit-sticky;
